--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -1,4 +1,5 @@
 # TODO: ちゃんと出来てないのでこのまま使わないほうがよいです
+# ref. http://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-template-resource-type-ref.html
 AWSTemplateFormatVersion: 2010-09-09
 
 Parameters:
@@ -65,27 +66,30 @@ Resources:
   # CloudFront
   ######
   # http://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/quickref-cloudfront.html
-  # myDistribution:
-  #   Type: AWS::CloudFront::Distribution
-  #   Properties:
-  #     DistributionConfig:
-  #       Origins:
-  #       - DomainName: !Sub ${ProjectName}-stg.s3-website-ap-northeast-1.amazonaws.com
-  #         Id: !Sub S3-Website-${ProjectName}-stg.s3-website-ap-northeast-1.amazonaws.com
-  #         S3OriginConfig:
-  #           OriginAccessIdentity: ''
-  #       Enabled: 'true'
-  #       Comment: Staging
-  #       DefaultRootObject: index.html
-  #       DefaultCacheBehavior:
-  #         AllowedMethods:
-  #         - GET
-  #         - HEAD
-  #         TargetOriginId: !Sub S3-Website-${ProjectName}-stg.s3-website-ap-northeast-1.amazonaws.com
-  #         ForwardedValues:
-  #           QueryString: 'false'
-  #           Cookies:
-  #             Forward: none
-  #         ViewerProtocolPolicy: allow-all
-  #       ViewerCertificate:
-  #         CloudFrontDefaultCertificate: 'true'
+  DistributionProd:
+    Type: AWS::CloudFront::Distribution
+    Properties:
+      DistributionConfig:
+        Origins:
+        - DomainName: !Sub ${ProjectName}-prod.s3-website-ap-northeast-1.amazonaws.com
+          Id: !Sub S3-Website-${ProjectName}-prod.s3-website-ap-northeast-1.amazonaws.com
+          # S3OriginConfig:
+          #   OriginAccessIdentity: ''
+          CustomOriginConfig:
+            OriginProtocolPolicy: http-only
+        Enabled: 'true'
+        Comment: Production
+        HttpVersion: http2
+        DefaultRootObject: index.html
+        DefaultCacheBehavior:
+          AllowedMethods:
+          - GET
+          - HEAD
+          TargetOriginId: !Sub S3-Website-${ProjectName}-prod.s3-website-ap-northeast-1.amazonaws.com
+          ForwardedValues:
+            QueryString: 'false'
+            Cookies:
+              Forward: none
+          ViewerProtocolPolicy: allow-all
+        ViewerCertificate:
+          CloudFrontDefaultCertificate: 'true'
