--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -23,7 +23,7 @@ Resources:
       WebsiteConfiguration:
         IndexDocument: index.html
     DeletionPolicy: Retain
-  BucketPolicyStg:
+  myBucketPolicy:
     Type: AWS::S3::BucketPolicy
     Properties:
       PolicyDocument:
