--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -45,6 +45,7 @@ Resources:
   # CloudFront
   ######
   # http://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/quickref-cloudfront.html
+  # http://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-properties-cloudfront-distribution.html
   myDistribution:
     Type: AWS::CloudFront::Distribution
     Properties:
@@ -76,3 +77,37 @@ Resources:
         DefaultRootObject: index.html
         Comment: !Sub ${Stage}
         Enabled: true
+
+  ######
+  # Lambda
+  ######
+  # http://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/quickref-lambda.html
+  # http://docs.aws.amazon.com/ja_jp/AWSCloudFormation/latest/UserGuide/aws-resource-lambda-function.html
+  # BasicAuthFunction:
+  #   Type: AWS::Lambda::Function
+  #   Properties: 
+  #     Code:
+  #       ZipFile:
+  #     FunctionName: basic_auth
+  #     Handler: index.handler
+  #     Role: arn:aws:iam::000000000000:role/LambdaRole
+  #     Runtime: nodejs6.10
+  #     Timeout: 1
+
+  LambdaExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      # RoleName: LambdaExecutionRole
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+        - Effect: Allow
+          Principal:
+            Service:
+            - lambda.amazonaws.com
+            - edgelambda.amazonaws.com
+          Action:
+          - sts:AssumeRole
+      ManagedPolicyArns:
+      - arn:aws:iam::aws:policy/service-role/AWSLambdaRole
+      - arn:aws:iam::aws:policy/CloudWatchLogsFullAccess
