--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -40,6 +40,7 @@ Resources:
                 - !Ref myS3Bucket
                 - /*
       Bucket: !Ref myS3Bucket
+    DeletionPolicy: Retain
 
   ######
   # CloudFront
@@ -77,6 +78,7 @@ Resources:
         DefaultRootObject: index.html
         Comment: !Sub ${Stage}
         Enabled: true
+    DeletionPolicy: Retain
 
   ######
   # Lambda
@@ -111,3 +113,4 @@ Resources:
       ManagedPolicyArns:
       - arn:aws:iam::aws:policy/service-role/AWSLambdaRole
       - arn:aws:iam::aws:policy/CloudWatchLogsFullAccess
+    DeletionPolicy: Retain
