--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -9,6 +9,12 @@ Parameters:
   Stage:
     Type: String
     Default: Staging
+  LambdaFunctionName:
+    Type: String
+    Default: basic_auth
+  LambdaFunctionVersion:
+    Type: Number
+    Default: 1
 
 Resources:
   ######
@@ -72,6 +78,9 @@ Resources:
               Forward: all
             QueryString: true
           Compress: true
+          LambdaFunctionAssociations:
+          - EventType: viewer-request
+            LambdaFunctionARN: !Sub arn:aws:lambda:us-east-1:${AWS::AccountId}:function:${LambdaFunctionName}:${LambdaFunctionVersion}
         ViewerCertificate:
           CloudFrontDefaultCertificate: true
         HttpVersion: http2
