--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -9,12 +9,9 @@ Parameters:
   Stage:
     Type: String
     Default: Staging
-  LambdaFunctionName:
+  LambdaFunctionARN:
     Type: String
-    Default: basic_auth
-  LambdaFunctionVersion:
-    Type: Number
-    Default: 1
+    Default: ''
 
 Resources:
   ######
@@ -80,7 +77,7 @@ Resources:
           Compress: true
           LambdaFunctionAssociations:
           - EventType: viewer-request
-            LambdaFunctionARN: !Sub arn:aws:lambda:us-east-1:${AWS::AccountId}:function:${LambdaFunctionName}:${LambdaFunctionVersion}
+            LambdaFunctionARN: !Sub ${LambdaFunctionARN}
         ViewerCertificate:
           CloudFrontDefaultCertificate: true
         HttpVersion: http2
