redirect-to-https comment

--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -67,6 +67,7 @@ Resources:
         DefaultCacheBehavior:
           TargetOriginId: !Sub S3-Website-${ProjectName}.s3-website-${AWS::Region}.amazonaws.com
           ViewerProtocolPolicy: allow-all
+          # ViewerProtocolPolicy: redirect-to-https
           AllowedMethods:
           - GET
           - HEAD
